fix: heading spacing

--- a/assets/scss/link.scss
+++ b/assets/scss/link.scss
@@ -1,7 +1,7 @@
 a {
   display: inline;
   position: relative;
-  padding: 0px 4px;
+  padding: 0px;
   overflow: hidden;
   text-overflow: ellipsis;
   text-decoration: none;
